--- a/LifeTrack.Server/LifeTrack.Server.csproj
+++ b/LifeTrack.Server/LifeTrack.Server.csproj
@@ -11,9 +11,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Services\Data\HealthMetricStandarts.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Services\Data\HealthMetricStandarts.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
