--- a/LifeTrack.Server/LifeTrack.Server.csproj
+++ b/LifeTrack.Server/LifeTrack.Server.csproj
@@ -34,4 +34,10 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Services\Data\DbZahlushki.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
