--- a/lifetrack.client/package.json
+++ b/lifetrack.client/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "faker": "^6.6.6",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
